# youtube_surfer_ai_agent

./: .gitignore  README.md  app.py  downloader.py  main.py  playlist_urls.py  pyproject.toml  requirements.txt  youtube_poller.py  youtube_sync.py
.github/workflows/: update_space.yml
modules/: answerer.py  channel_utils.py  collector.py  db.py  embeddings.py  indexer.py  retriever.py  youtube_utils.py
tests/: search.py  test_num_records_in_channel.py
