[project]
name = "youtube-surfer-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "dotenv>=0.9.9",
    "feedparser>=6.0.11",
    "google-api-python-client>=2.179.0",
    "gradio>=5.44.0",
    "gradio-modal>=0.0.4",
    "openai>=1.102.0",
    "pytube>=15.0.0",
    "sentence-transformers>=5.1.0",
    "yt-dlp>=2025.9.5",
]
